# OMOG

Hermite/: .gitignore  CMakeLists.txt
Hermite/build_linux/: CMakeCache.txt  Hermite  Makefile  cmake_install.cmake
Hermite/include/: Application.hpp  Defines.hpp  Entity.h  Hermite.h  NURBPoint.hpp  NURBS.h  Point.h  ShapesManager.h  Tangent.h  ThreadPool.hpp
Hermite/src/: Application.cpp  Hermite.cpp  NURBPoint.cpp  NURBS.cpp  Point.cpp  Tangent.cpp  main.cpp
initial/: Hermite.js  Point.js  Tangent.js  index.html  sketch.js
